<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:importantForAccessibility="no"
                android:src="@drawable/brazil"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/search_icon"
                android:hint="@string/search_cities"
                android:inputType="textFilter" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/state_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:entries="@array/uf_options_filter"
            android:paddingHorizontal="8dp"
            android:paddingVertical="18dp" />

        <RadioGroup
            android:id="@+id/region_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/radio_btn_1"
                android:hint="Cent. O" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/radio_btn_2"
                android:hint="Sul" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/radio_btn_3"
                android:hint="Nort." />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/radio_btn_4"
                android:hint="Nord." />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/radio_btn_5"
                android:hint="Sud." />
        </RadioGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:scrollbars="vertical"
            android:id="@+id/cities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/remove_filters_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="start|bottom"
        android:importantForAccessibility="no"
        android:src="@drawable/filter_xmark_svgrepo_com" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end|bottom"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:importantForAccessibility="no"
            android:src="@drawable/plus_svgrepo_com" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sync_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end|bottom"
            android:importantForAccessibility="no"
            android:src="@drawable/sync" />





    </LinearLayout>

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />


</FrameLayout>