<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="top|center"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_create_city_dialog"
        tools:ignore="MissingConstraints"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:paddingHorizontal="8dp"
            android:paddingVertical="18dp"
            android:background="@drawable/border"
            android:id="@+id/state_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/uf_options"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:paddingHorizontal="8dp"
            android:paddingVertical="18dp"
            android:background="@drawable/border"
            android:id="@+id/region_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/region_options"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_city_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create" />


</LinearLayout>